030-software/fluxcd/apps/synapse/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
  labels:
    app: synapse
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: synapse
